--- a/index.html
+++ b/index.html
@@ -3,8 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway</title>
+    <link href="Resources/CSS/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
+<h1>Broadway Design</h1>
+<a href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Home</a>
+<br />
+<a href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">About</a>
+<br />
+<a href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Work</a>
+<br />
+<a href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Team</a>
+<br />
+<a href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Contact</a>
+<h2>Our Process</h2>
+<image src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
+<h3>Identify</h3>
+<p>We focus on the most important details.</p>
+<image src"https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"/>
+<h3>Understand</h3>
+<p>We study our projects inside and out.</p>
+<image src"https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
+<h3>Execute</h3>
+<p>We put everything we have into our work.</p>
+<h3>Designed in New York</h3>
 
   </body>
 </html>
