--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   </head>
   <body>
 <h1>Broadway Design</h1>
-<a href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Home</a>
+<a class=nav href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Home</a>
 <br />
-<a href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">About</a>
+<a class=nav href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">About</a>
 <br />
-<a href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Work</a>
+<a class=nav href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Work</a>
 <br />
-<a href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Team</a>
+<a class=nav href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Team</a>
 <br />
-<a href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Contact</a>
+<a class=nav href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Contact</a>
 <h2>Our Process</h2>
 <image src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
 <h3>Identify</h3>
@@ -26,7 +26,15 @@
 <image src"https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
 <h3>Execute</h3>
 <p>We put everything we have into our work.</p>
-<h3>Designed in New York</h3>
-
+<h3 id="nyc">Designed in New York</h3>
+<h3>Portfolio</h3>
+<p>Coming Soon</p>
+<h3>Team</h3>
+<p>We're Hiring!</p>
+<h3>Contact</h3>
+<p>Phone: (555)-555-5555</p>
+<p>E-mail: test@example.com</p>
+<p>Twitter: @test</p>
+<p id="copyright">&copy Broadway 2016 <a class=nav href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Home</a> <a class=nav href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">About</a> <a class=nav href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Work</a> <a class=nav href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Team</a> <a class=nav href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Contact</a></p>
   </body>
 </html>
