--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 <image src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
 <h3>Identify</h3>
 <p>We focus on the most important details.</p>
-<image src"https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"/>
+<image src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"/>
 <h3>Understand</h3>
 <p>We study our projects inside and out.</p>
-<image src"https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
+<image src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
 <h3>Execute</h3>
 <p>We put everything we have into our work.</p>
 <h3 id="nyc">Designed in New York</h3>
