--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <link href="Resources/CSS/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
-<h1>Broadway Design</h1>
-<a class=nav href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Home</a>
+<h1>Broadway Design <br /> <a class=nav href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Home</a>
 <br />
 <a class=nav href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">About</a>
 <br />
@@ -15,7 +14,7 @@
 <br />
 <a class=nav href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Team</a>
 <br />
-<a class=nav href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Contact</a>
+<a class=nav href="/Users/joedemkovich/Documents/Projects/Broadway/index.html">Contact</a></h1>
 <h2>Our Process</h2>
 <image src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
 <h3>Identify</h3>
